# Geant4Roughness

./: #compileAndRun.sh#  .gitignore  CMakeLists.txt  compileAndRun.sh  compileOnly.sh  initialize.mac  initialize_vis.mac  main.cc  ptfe_runEvent.cc
_archived/: ptfe_settings.cc  ptfe_settings.hh
depth/: PoDepths.C  readRoot.ipynb
depth/.ipynb_checkpoints/: enSpectrumFlat-checkpoint.ipynb
include/: CMakeLists.txt  ptfe_actionInitialization.hh  ptfe_anaTrack.hh  ptfe_detectorConstruction.hh  ptfe_eventAction.hh  ptfe_materials.hh  ptfe_physicsList.hh  ptfe_primaryGeneratorAction.hh  ptfe_runAction.hh  ptfe_steppingAction.hh  ptfe_surfaceGenerator.hh  ptfe_surfaceParameterisation.hh
mac/: analysis_settings.mac  gps_settings_planeSource.mac  gps_settings_singleProton_cutTransverse2.mac  initialize.mac  surface_settings.mac  surface_settings_scale1.mac  verbose_settings.mac  vis_settings.mac  vis_settings_basic.mac
mac/contamination/: standardContamination_100nm.mac  standardContamination_100um.mac  standardContamination_3nm.mac
mac/gps/: gps_settings_planeSource.mac  gps_settings_singleProton.mac  gps_settings_singleProton_cutTransverse1.mac  gps_settings_singleProton_cutTransverse2.mac
mac/surface/: surface_settings_noRough.mac  surface_settings_scale1.mac  surface_settings_scale2.mac
mac/surface_idVolume/: surface_settings_noRough.mac  surface_settings_scale1.mac
mac/visualization/: rayTracer.mac  rayTracerX.mac  vis_settings.mac  vis_settings_basic.mac
src/: CMakeLists.txt  ptfe_actionInitialization.cc  ptfe_anaTrack.cc  ptfe_detectorConstruction.cc  ptfe_eventAction.cc  ptfe_materials.cc  ptfe_physicsList.cc  ptfe_primaryGeneratorAction.cc  ptfe_runAction.cc  ptfe_steppingAction.cc  ptfe_surfaceGenerator.cc  ptfe_surfaceParameterisation.cc
